# ffrecord

./: .buildinfo  .gitignore  LICENSE  README.md  cmake_build.py  ffrecord.html  ffrecord.torch.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  main.yml  wheels.yml
_modules/: index.html
_modules/ffrecord/: fileio.html  package.html  utils.html
_modules/ffrecord/torch/: dataloader.html  dataset.html
_sources/: ffrecord.rst.txt  ffrecord.torch.rst.txt  index.rst.txt  modules.rst.txt
benchs/: bench_dataloader.py  bench_imagenet.py  bench_io.py
docs/: README.md  build.sh
docs/source/: conf.py
examples/: imagenet-profile.py  imagenet.py
examples/cocodetection/: .gitignore  README.md  coco2ffrecord.py  ffdataloader.py  train.py
examples/cocodetection/net/: ssd.py
examples/cocodetection/utils/: obj_utils.py
examples/imagenet/: README.md  imagenet2ffrecord.py  train.py
ffrecord/: __init__.py  fileio.py  package.py  utils.py
ffrecord/src/: CMakeLists.txt  bindings.cpp  fileio.h  reader.cpp  utils.cpp  utils.h  writer.cpp
ffrecord/torch/: __init__.py  dataloader.py  dataset.py
tests/: fsalign.py  test_fsalign.py  test_io.py  test_package.py  test_pickle.py  test_pl.py  test_pytorch.py  test_registry.py  test_utils.py  tests_io.py  tests_pytorch.py
